--- a/overlay/dev/secret.yaml
+++ b/overlay/dev/secret.yaml
@@ -11,3 +11,4 @@ data:
   MINIO_PORT: <path:kv/data/minio#MINIO_PORT | base64encode>
   MINIO_ACCESS_KEY: <path:kv/data/minio#MINIO_ACCESS_KEY | base64encode>
   MINIO_SECRET_KEY: <path:kv/data/minio#MINIO_SECRET_KEY | base64encode> 
+  MINIO_BUCKET_NAME: <path:kv/data/kafka#BUCKET | base64encode> 
