--- a/overlay/dev/secret.yaml
+++ b/overlay/dev/secret.yaml
@@ -6,7 +6,7 @@ type: Opaque
 data:
   SASL_MACHANISM: <path:kv/data/kafka#MECHANISM | base64encode>
   SASL_USER: <path:kv/data/kafka#USER | base64encode>
-  SASL_PASSWORD: <path:kv/data/kafka#PASSWORD | base64encode>
+  SASL_PASSWORD: <path:kv/data/kafka#PASSWORD | base64encode>   #updated v2
   MINIO_END_POINT: <path:kv/data/minio#MINIO_END_POINT | base64encode> 
   MINIO_PORT: <path:kv/data/minio#MINIO_PORT | base64encode>
   MINIO_ACCESS_KEY: <path:kv/data/minio#MINIO_ACCESS_KEY | base64encode>
